[gd_scene load_steps=10 format=3 uid="uid://c6mhnfplsrfod"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_fdpge"]
[ext_resource type="Texture2D" uid="uid://d2nbbmxoo0vkf" path="res://assets/textures/sprites/submarine_animated.PNG" id="2_fqad5"]
[ext_resource type="Texture2D" uid="uid://btvphj3a2mymt" path="res://assets/textures/sprites/submarine_broken.PNG" id="3_sli4i"]
[ext_resource type="PackedScene" uid="uid://c4kijmqp8bswt" path="res://scenes/game/player/hud.tscn" id="3_v4mv5"]
[ext_resource type="FontFile" uid="uid://cusgwbl28ojla" path="res://assets/fonts/Sweets Smile.ttf" id="5_nuc0t"]
[ext_resource type="AudioStream" uid="uid://dhsqg5rqa7eay" path="res://assets/audio/collision.mp3" id="8_77ljf"]
[ext_resource type="PackedScene" uid="uid://dqnbj6063vbd7" path="res://scenes/game/player/harpoon_launcher.tscn" id="8_81mnv"]
[ext_resource type="AudioStream" uid="uid://bij6r0bo6j2iy" path="res://assets/audio/shot_at.mp3" id="9_alpui"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_i4x3y"]
friction = 0.0
bounce = 1.0

[node name="Player" type="RigidBody2D" groups=["player"]]
collision_mask = 3
inertia = 1.0
physics_material_override = SubResource("PhysicsMaterial_i4x3y")
gravity_scale = 0.15
continuous_cd = 1
max_contacts_reported = 10
contact_monitor = true
lock_rotation = true
script = ExtResource("1_fdpge")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_fqad5")
hframes = 2
vframes = 2

[node name="BrokenSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_sli4i")

[node name="Label" type="Label" parent="BrokenSprite"]
offset_left = -120.0
offset_top = -286.667
offset_right = 139.0
offset_bottom = -216.667
theme_override_colors/font_color = Color(0.921569, 0.921569, 0.286275, 1)
theme_override_fonts/font = ExtResource("5_nuc0t")
theme_override_font_sizes/font_size = 50
text = "KEY_RETRY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-5, -14, -19, -11, -24, -19, -29, -19, -30, -14, -36, -14, -36, -9, -32, -6, -36, -2, -32, 3, -25, -1, -22, 5, -7, 14, 11, 18, 20, 18, 24, 13, 24, -1, 37, -3, 31, -14, 29, -17, 19, -24, 11, -23, 4, -16)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="snd_bump" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_77ljf")
volume_db = 15.0

[node name="snd_damage" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_alpui")
volume_db = 15.0

[node name="InvincibleTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="Hud" parent="." instance=ExtResource("3_v4mv5")]

[node name="HarpoonLauncher" parent="." instance=ExtResource("8_81mnv")]
unique_name_in_owner = true
